Changelog
=========

8.6-dev - (unreleased)
----------------------

8.5 - (2014-02-03)
------------------
* Bug fix: cleaned references of tooltip macro being loaded from dataset_view
  [ichimdav refs #18197]

8.4 - (2014-01-22)
------------------
* Bug fix: reference geotags macros from eea.forms instead of
  eea.dataservice
  [ichimdav refs #16719]
* Bug fix: reference temporal-coverage macros from eea.forms instead of
  eea.dataservice
  [ichimdav refs #16719]
* Bug fix: fixed tests after adding the temporalCoverage through the 
  schema extender as appose to directly on the indicators schema
  [ichimdav #17611]
* Bug fix: look also for DavizVizualizations when resolving image tags for 
  Assessment and IndicatorFactSheet with fallback to depiction images
  [ichimdav refs #17747]

8.3 - (2013-12-10)
------------------
* Change: do not save success portal message in aggregated edit,
  for simple_edit
  [simiamih refs #16797]

8.2 - (2013-12-05)
------------------
* Change: explicitly depend of Products.EEAContentTypes within setup.py of
  this package
  [ichimdav refs #17588]
* Change: use the ITemporalCoverageAdapter from within Products.EEAContentTypes
  instead of eea.dataservice
  [ichimdav refs #17588]
* Feature: Added resize feature for embedded charts
  [szabozo0 refs #17453]
* Change: removed versions macro; now using viewlet
  [simiamih refs #17321]
* Change: removed the dependecy to eea.locationwidget
  [ghicaale refs #9155]

8.1 - (2013-11-21)
------------------
* Change: cosmetics. harmonized box style
  [demarant refs ##16676]

8.0 - (2013-11-20)
------------------
* Feature: check for temporalCoverage and geographicalCoverage also from
  DavizVizualizations within an Assessment or an IndicatorFactSheet
  [ichimdav refs #17306]

7.9 - (2013-11-05)
------------------
* Bug fix: make sure computed Titles are bytestreams not unicode
  [tiberich #17364]

7.8 - (2013-10-04)
------------------
* Bug fix: fix doctests
  [tiberich]

7.7 - (2013-09-23)